--- a/templates/centralized-log-analytics.yml
+++ b/templates/centralized-log-analytics.yml
@@ -539,7 +539,7 @@ Resources:
         Fn::GetAtt:
         - LogStreamerRole
         - Arn
-      Runtime: nodejs4.3
+      Runtime: nodejs10.x
       Timeout: '300'
     Type: AWS::Lambda::Function
   LogStreamerRole:
